<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_word"
        android:textSize="28sp"
        android:textColor="@color/word_ten_color"/>

    <EditText
        android:id="@+id/editTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word" />

    <EditText
        android:id="@+id/editMota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trans" />

    <EditText
        android:id="@+id/editTheLoai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category" />

    <Button
        android:id="@+id/btnAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_add"
        android:drawablePadding="5dip"
        android:layout_marginTop="2dp"
        android:padding="10dp"/>

    <!--android:drawableLeft="@drawable/ic_add"-->

    <Button
        android:id="@+id/btnAddSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_sound"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_add"
        android:drawablePadding="5dip"
        android:layout_marginTop="2dp"
        android:padding="10dp"/>
    <!--android:drawableLeft="@drawable/ic_add"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@drawable/background_btn"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/background_btn"
            android:layout_margin="5dp"/>

    </LinearLayout>


</LinearLayout>